Set horizontal overflow to hidden on body tag and fixed hover effects on contact navigations.

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@
 
   body {
     margin: 0 auto;
+    padding: 0;
+    overflow-x: hidden;
   }
 }
 
